--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,38 +1,70 @@
 ==English==
 === Noun ===
 '''coat''' (''plural:'' '''coats''')
+
 #an [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
 #a [[covering]] of [[material]], such as [[paint]]
 
 ==== Translations====
+'''an outer garment covering the upper torso and arms'''
+{{top}}
 *Dutch: [[mantel]] ''m'', [[jas]] ''m''
-*Finnish: [[takki]] (1), [[päällys]] (2)
-*French: [[manteau]] ''m'' (1), [[couche]] ''f'' (2)
-*German: [[Mantel]] ''m'' (1), [[Beschichtung]] ''f'' (2)
+*Finnish: [[takki]]
+*French: [[manteau]] ''m''
+*German: [[Mantel]] ''m''
 *Indonesian: [[mantel]]
+*Italian: [[mantello]] ''m''
+{{mid}}
+*Slovene: [[plašč]] ''m''
+*Spanish: [[abrigo]] ''m'', [[saco]] ''m'', [[casaca]] ''f''
+{{bottom}}
+
+'''a covering of material, such as paint'''
+{{top}}
+*Dutch: [[laag]] ''f''
+*Finnish: [[päällys]]
+*French: [[couche]] ''f''
+*German: [[Beschichtung]] ''f''
+*Italian: [[rivestimento]] ''m''
+{{mid}}
+*Spanish: [[cubierta]] ''f''
+{{bottom}}
+
+=====Translations to be checked=====
+{{checktrans}}
 *Irish: [[cóta]] ''m''
-*Italian: [[mantello]] ''m'' (1), [[rivestimento]] ''m'' (2)
 *Japanese: [[コート]] (kōto)
+*Portuguese: [[casaco]] ''m'', [[manta]] ''f''
 *Romanian: [[haină]] ''f'', [[manta]] ''f''
-*Slovene: [[plašč]] ''m'' (1)
-* Spanish: [[abrigo]] ''m'' (1), [[saco]] ''m'' (1), [[cubierta]] ''f'' (2)
 
 ====Derived terms====
 *[[coat of arms]]
-Portuguese: casaco (m), manta (f)
 
 === Verb ===
 '''to coat'''
+
 #To cover with a coat (2) of some material
 #:''One can buy '''coated''' frying pans, which are much easier to wash up than normal ones.''
 #To cover as a coat (2).
+
 ====Translations====
+'''To cover with a coat of some material'''
+{{top}}
+*Dutch: [[coaten]]
 *French: [[couvrir]]
-*German: [[beschichten]] (1)
+*German: [[beschichten]]
 *Italian: [[rivestire]]
+{{mid}}
 *Spanish: [[cubrir]]
+{{bottom}}
+
+
+'''To cover as a coat'''
+{{top}}
+{{mid}}
+{{bottom}}
 
 [[Category:1000 English basic words]]
 
-[[io:Coat]]
+[[io:coat]]
 [[it:coat]]
