/* Translations */ French <fight#565544>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -45,6 +45,7 @@
 *Danish: [[kæmpe]]
 *Dutch: [[vechten]]
 *Finnish: [[tapella]]
+*French: [[attaquer]], [[se battre]], [[combattre]]
 *German: [[kämpfen]]
 *Hebrew: [[קרב]]
 *Indonesian: [[tarung]], [[tengkar]], [[serang]]
