sorted nl <icon#571172>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -23,6 +23,7 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 ==== Translations ====
 '''image'''
 {{top}}
+*Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]], [[symboli]]
 *Polish: [[ikona]] ''f''
 {{mid}}
@@ -30,6 +31,7 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 
 '''religious painting'''
 {{top}}
+*Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]]
 *Polish: [[ikona]] ''f''
 {{mid}}
@@ -44,6 +46,7 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 
 '''small picture'''
 {{top}}
+*Dutch: [[icoon]] {{n}}
 *Finnish: [[kuvake]]
 *Polish: [[ikona]] ''f'', [[ikonka]] ''f''
 {{mid}}
@@ -51,12 +54,11 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 
 These translations need to be checked by someone:
 {{checktrans}}
-*Dutch: [[icoon]]
 *Interlingua: [[icono]]
 *Italian: [[icona]] {{f}}
 
-[[io:Icon]]
-[[la:Icon]]
+[[io:icon]]
+[[la:icon]]
 [[pl:icon]]
-[[ru:Icon]]
-[[fi:Icon]]
+[[ru:icon]]
+[[fi:icon]]
