--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -4,7 +4,9 @@ Middle English
 ===Transitive Verb===
 # Pierce, wound, with (usually short) pointed tool or [[weapon]] e.g. [[knife]] or [[dagger]]; aim blow with such weapon (''at''); inflict sharp pain on (person, his feelings, conscience, etc.), aim blow ''at'' (reputation, person etc.)
 ===Noun===
-# Act of stabbing, blow or thrust with knife etc., wound thus made, blow or pain inflicted on person's feelings; attempt, try
+# Act of stabbing, blow or thrust with knife etc., wound thus made, blow or pain inflicted on person's feelings
+# [[attempt]], [[try]]
+#:''I'll give this thankless task a '''stab'''''
 
 ===[[Abbreviation]]===
 STAB
