--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -189,4 +189,4 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 [[io:Plum]]
 [[it:plum]]
 [[hu:plum]]
-[[pl:Plum]]
+[[pl:plum]]
