robot  Modifying: pl <come#574160>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -71,5 +71,5 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[io:Come]]
 [[it:come]]
 [[la:Come]]
-[[pl:Come]]
+[[pl:come]]
 [[fi:Come]]
