robot  Adding: ja Modifying: pl <zenith#577288>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -30,4 +30,5 @@ From Arabic ''as-samt'' "direction of heads", via misspelled Italian ''zenit'' i
 {{bottom}}
 
 [[it:zenith]]
-[[pl:Zenith]]
+[[ja:zenith]]
+[[pl:zenith]]
