--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''tortoise''' (''plural'' '''tortoises''')
 
-#A land-dwelling [[reptile]], whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]).  The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
+#Any of various land-dwelling [[reptile]]s, of [[family]] ''[[Testudinidae]]'', whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]).  The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 
 ====Translations====
 {| border=0 width=100%
