--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,49 +1,44 @@
 ==English==
-=== Pronunciation ===
+
+===Pronunciation===
 */krēp/, /kriːp/, /kri:p/
 
-=== Noun ===
-{{sb|creep|[[creeps]]}}
-#The movement of something that creeps.
-#A gradual change in anything.
-#(''informal'') A annoyingly [[unpleasant]] person.
-#:''Stop following me, you creep!''
+===Noun===
+'''creep'''  (''plural:'' '''[[creeps]]''')
+# The movement of something that creeps.
+# A gradual change in anything.
+# (''informal'') A annoyingly [[unpleasant]] person.
+#: ''Stop following me, you creep!''
 
 ====Translations====
 
-'''<pre>movement of something that creeps</pre>'''
+'''movement of something that creeps'''
 {{top}}
-<!--Put translations for languages from A to I here-->
-*Dutch: [[kruip]] ''m''
+*Dutch: [[kruip]] {{m}}
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 {{bottom}}
 
-'''<pre>gradual change in anything</pre>'''
+<!--'''gradual change in anything'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 {{bottom}}
-
-'''<pre>informal: an annoyingly unpleasant person</pre>'''
+-->
+'''informal: an annoyingly unpleasant person'''
 {{top}}
-<!--Put translations for languages from A to I here-->
-*Dutch: [[griezel]] ''m'', [[engerd]] ''m''
-*German: [[schräger Vogel]] ''m''
+*Dutch: [[griezel]] {{m}}, [[engerd]] {{m}}
 {{mid}}
-<!--Put translations for languages from J to Z here-->
+*German: [[schräger Vogel]] {{m}}
 {{bottom}}
 
 ===Verb===
-{{irregverb|creep|[[creeps]]|[[crept]]|[[crept]]|[[creeping]]}}
-#''(transitive)'' To move slowly with the [[abdomen]] close to the ground.
-#:''Lizards and snakes crept over the ground.''
-#''(transitive)'' Of [[plant]]s, to grow across a surface rather than upwards.
-#''(transitive)'' To move slowly and quietly in a particular direction.
-#:''He tried to creep past the guard without being seen.''
-#''(transitive)'' To change gradually in a particular direction.
-#:''Prices have been creeping up all year.''
+{{en-infl-irreg|creep|creeps|creeping|crept|crept}}
+# ''(transitive):'' To move slowly with the [[abdomen]] close to the ground.
+#: ''Lizards and snakes '''crept''' over the ground.''
+# ''(transitive):'' Of [[plant]]s, to grow across a surface rather than upwards.
+# ''(transitive):'' To move slowly and quietly in a particular direction.
+#: ''He tried to '''creep''' past the guard without being seen.''
+# ''(transitive):'' To change gradually in a particular direction.
+#: ''Prices have been '''creeping''' up all year.''
 
 ====Synonyms====
 *(''move slowly with the abdomen close to the ground''): [[crawl]]
@@ -51,43 +46,35 @@
 *(''move slowly and quietly in a particular direction''): [[inch]]
 *(''change gradually in a particular direction''): [[inch]]
 
-==== Translations ====
-'''<pre>move slowly with the abdomen close to the ground</pre>'''
+====Translations====
+'''move slowly with the abdomen close to the ground'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
 *Esperanto: [[rampi]]
-*Finnish: [[ryömiä]], [[madella]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
+*Finnish: [[ryömiä]], [[madella]]
 *Russian: [[ползти]]
 {{bottom}}
 
-'''<pre>grow across a surface rather than upwards</pre>'''
+'''grow across a surface rather than upwards'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 *Russian: [[стелиться]]
 {{bottom}}
 
-'''<pre>move slowly and quietly in a particular direction</pre>'''
+'''move slowly and quietly in a particular direction'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[kruipen]]
 *Finnish: [[hiipiä]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 *Russian: [[стелиться]]
 {{bottom}}
 
-'''<pre>change gradually in a particular direction</pre>'''
+'''change gradually in a particular direction'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[opschuiven]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 {{bottom}}
 
 =====Translations to be checked=====
@@ -102,6 +89,7 @@
 ===Derived terms===
 *[[creep up on]]
 *[[creepy]]
+*[[decrepit]]
 *[[function creep]]
 *[[give someone the creeps]]
 
