--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -8,12 +8,9 @@
 # Country in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
 
 ====Translations====
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{top}}
 *Arabic: [[فَرَنْسَا]]
-*Bosnian: [[Francuska]] ''f''
+*Bosnian: [[Francuska]] {{f}}
 *Breton: [[Frañs]] (State), [[Bro-C'hall]] (country)
 *Brithenig: [[Ffreinc']]
 *Catalan: [[França]] ''f''
@@ -32,10 +29,7 @@
 *Hungarian: [[Franciaország]]
 *Indonesian: [[Perancis]]
 *Interlingua: [[Francia]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
+{{mid}}
 *Irish: [[an Fhrainc]] ''f''
 *Italian: [[Francia]] ''f''
 *Japanese: [[フランス]], [[仏蘭西]] (Furansu)
@@ -50,14 +44,16 @@
 *Portuguese: [[França]]
 *Romanian: [[Fran&#355;a]] ''f''
 *Russian: [[Франция]]
+*Serbian:
+*:Cyrillic: [[Француска]] {{f}}
+*:Latin: [[Francuska#Serbian|Francuska]] {{f}}
 *Slovene: [[Francija]] ''f''
 *Spanish: [[Francia]] ''f''
 *Swedish: [[Frankrike]]
 *Turkish: [[Fransa]]
 *Vietnamese: [[Pháp]]
 *Welsh: [[Ffrainc]] ''f''
-|}
-|}
+{{bottom}}
 
 ====Related terms====
 *[[Francophone]]
