--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -1,11 +1,16 @@
 ==English==
 
 ===Etymology===
-From the name of the British comedy, [[w:Monty Python's Flying Circus|Monty Python’s Flying Circus]], and due to the type of humour in it.
+From the name of the British comedy troupe, Monty Python, and due to the type of humour in it.
 
 ===Adjective===
-'''Pythonesque''' or '''pythonesque'''<!--Encarata gives only uc, m-w and Collins have no entry-->
+'''Pythonesque''' or '''pythonesque'''
 
-# [[Surreal]] or [[absurd]] [[humour]], pertaining to Monty Python’s Flying Circus.
+# [[surreal]] or [[absurd]] [[humour]]
+
+===See also===
+*[[w:Monty Python|Monty Python]]
+*[[w:Monty Python's Flying Circus|Monty Python’s Flying Circus]]
+
 
 [[Category:English adjectives]]
