--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -3,12 +3,13 @@
 ===Etymology===
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine).
 
-In the English language, it is only one a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. 
-
 === Noun ===
 ''(UK)'' '''blond'''
 #a person of fair skin and hair (usually spelled "''blonde''" when referring to a woman).
 #a [[pale]] [[golden]] [[brown]] [[colour]].
+
+===Usage note===
+: In the English language, it is only one a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. 
 
 ==== Translations ====
 '''fair skinned/haired person'''
@@ -18,7 +19,7 @@ In the English language, it is only one a few distinct words where the gender di
 {{bottom}}
 
 === Adjective ===
-:blond
+'''blond'''
 #of a bleached, or pale golden colour.
 #of a blond complexion (referring to a person)
 
