--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -27,9 +27,9 @@
 *[[Italian]]: long form: Stati Uniti d'America, short form: Stati Uniti
 *Japanese: [[米国]] (べいこく, beikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, amerika gasshūkoku)
 *Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
-*Latin: [[Respublicae Unitae Americae]] ''nominative'', Rerumpublicarum Unitarum Americae ''genitive''
+*Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]]
 *Malay: [[Amerika Syarikat]]
-*Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
+*Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]], [[USA]]
 *Portuguese: [[Estados Unidos da América]] ''m pl'', short: [[Estados Unidos]] ''m pl'', very short: [[EUA]] ''m pl''
 *Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
 *Russian: [[Соединённые Штаты Америки]], short: [[США]]
