limburgish term added <lies#589287>

--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -1,3 +1,5 @@
+=={{en}}==
+
 ===Noun===
 
 '''lies''' ''pl''
@@ -37,5 +39,11 @@ See also: ===Noun===
 #past tense singular of [[lesen]]
 #imperative singular of lesen
 
+----
+=={{li}}==
+
+===Noun===
+# [[list]]
+[[Category:Limburgish language]]
 [[it:lies]]
 [[nl:lies]]
