--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -1,4 +1,7 @@
 ==English==
+===Etymology===
+From Old English [[ceosan|ċēosan]].
+
 ===Pronunciation===
 *cho͞oz, /tʃuːz/, /<tt>tSu:z</tt>/
 *:'''Homophones''': [[chew]]s
