--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -13,3 +13,5 @@
 *[[Indonesian]]: [[datang]], [[datang|mendatangi]], [[datang|mendatangkan]]
 *[[Japanese]]: [[来た]] ([[きた]], kita)
 [[Category:200 English basic words]]
+
+[[fr:came]]
