--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -21,7 +21,7 @@
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *German: [[Vereinigte Staaten von Amerika]], short: [[USA]]
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', short: [[ΗΠΑ]]
-*Hebrew: [[ארצות הברית]],(Artzot Habrit) Short: [[ארה״ב]]
+*Hebrew: [[ארצות הברית]] (Artsot Habrit),  short: [[ארה״ב]]
 *[[Indonesia]]: [[Amerika Serikat]]
 *[[Irish]]: [[Meiriceá]] ''m4''
 *[[Italian]]: long form: Stati Uniti d'America, short form: Stati Uniti
