--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine).
 
-=== Noun ===
+===Noun===
 ''(UK)'' '''blond'''
 #a person of fair skin and hair (usually spelled "''blonde''" when referring to a woman).
 #a [[pale]] [[golden]] [[brown]] [[colour]].
@@ -11,19 +11,19 @@
 ===Usage note===
 : In the English language, it is only one a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurence in other languages. 
 
-==== Translations ====
+====Translations====
 '''fair skinned/haired person'''
 {{top}}
 *Swedish: [[blondin]] 
 {{mid}}
 {{bottom}}
 
-=== Adjective ===
+===Adjective===
 '''blond'''
 #of a bleached, or pale golden colour.
 #of a blond complexion (referring to a person)
 
-===Alternate spelling===
+===Alternative spellings===
 :[[blonde]] (US)
 
 ====Translations====
@@ -39,13 +39,13 @@
 [[Category:Colors]]
 
 ==Dutch==
-=== Adjective ===
+===Adjective===
 '''blond''' (blonde)
 # of light colour, usually said about light hair colour, but it can also refer to beer
 
 ----
-== Swedish ==
-=== Adjective ===
+==Swedish==
+===Adjective===
 '''blond'''
 # of light hair colour.
 
