--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -1,13 +1,15 @@
 ==English==
+
 {{wikipedia}}
 ===Etymology===
 From Latin phrase '''et cetera''', meaning ''and the rest''
 
 ===Adverb===
+'''et cetera'''
 #and the rest, and so on, and the others
 #:Et cetera, or [[abbreviation|abbreviated]] etc., is used in many texts as a replacement for the English [[phrase]] 'and so on'. 
 
-====Spelling Variations====
+===Alternative spellings===
 *[[&c]]
 *[[etc]]
 *[[etc.]]
@@ -33,6 +35,8 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 *Spanish: [[etcétera]], [[y más]], [[al fin]]
 *Swedish: et cetera, [[etc.]], [[etcetera]], [[osv.]], [[och så vidare]]
 *Vietnamese: [[vân vân]], [[v.v.]]
+
+----
 
 ==Latin==
 ===Phrase===
