--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -1,6 +1,6 @@
 <!-- NOTE: If you edit this page, please also edit "pyjamas" -->
-
 ==English==
+
 ===Etymology===
 From the [[Persian]] words &#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#1607; ''p&aelig; jama'' meaning ''leg garment'' via [[Urdu]]/[[Hindi]] word ''pajama''.
 
@@ -8,29 +8,13 @@ From the [[Persian]] words &#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#1607; ''p
 '''pajamas''' ''plural''
 #[[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 
-====Variant spellings====
+===Alternative spellings===
 *[[pyjamas]] (''British'')
 
 ====Translations====
-{{top}}
-*Bosnian: [[pidžama]] {{f}} {{s}}
-*Chinese: [[睡衣]] (shuì yī, lit. ''sleep clothing'')
-*Dutch: [[pyjama]] {{m}} {{s}}
-*Estonian: [[pidžaama]]
-*Finnish: [[pyjama]], [[yöpuku]] {{s}}
-*French: [[pijama]] {{m}} {{s}}
-*Indonesian: [[piyama]]
-*[[Interlingua]]: [[pajama]]
-{{mid}}
-*Japanese: [[パジャマ]] (pajama)
-*Portuguese: [[pijama]] {{m}} {{s}}
-*Serbian:
-*:Cyrillic: [[пиџама]] {{f}} {{s}}
-*:Latin: [[pidžama#Serbian|pidžama]] {{f}} {{s}}
-*Spanish: [[pijama]], [[pijamas]] ''n''
-*Swedish: [[pyjamas]] ''c'' {{s}}
-{{bottom}}
+*''See [[pyjamas#Translations|pyjamas]]''
 
-<!-- NOTE: If you edit this page, please also edit "pyjamas" -->
 [[Category:Hindi derivations]]
 [[Category:Persian derivations]]
+
+<!-- NOTE: If you edit this page, please also edit "pyjamas" -->
