--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -71,6 +71,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Esperanto: [[tiri]]
 *{{fi}}: [[vetää]]
 *French: [[tirer]]
 *German: [[ziehen]] [[:de:ziehen|(de)]]
