--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -5,7 +5,7 @@ From Anglo-Saxon '''''[[thunor]]'''''
 === Pronunciation ===
 *[[w:AHD|AHD]]: /thŭn'dər/
 *[[w:IPA|IPA]]: /ˈθʌndə(r)/
-*[[w:SAMPA|SAMPA]]: /"TVnd@(r)/
+*[[w:SAMPA|SAMPA]]: /<tt>"TVnd@(r)</tt>/
 
 ===Noun===
 '''thunder''' (''uncountable'')
@@ -13,12 +13,9 @@ From Anglo-Saxon '''''[[thunor]]'''''
 #The [[sound]] caused by the discharge of atmospheric electrical charge. 
 #:'''Thunder''' ''is preceded by [[lightning]].''
 #A sound resembling thunder. 
-#:''The noise he thought was '''thunder''' turned out to be the rattle of a sheet of [[aluminum]], struck by trees.''
-#A deep, rumbling noise 
+#:''The noise he thought was '''thunder''' turned out to be the rattle of a sheet of [[aluminium]], struck by trees.''
+#A deep, [[rumble|rumbling]] noise 
 #:''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a [[stampede]].''
-
-====Derived terms====
-*[[thunderclap]]
 
 ====Translations====
 *[[Breton]]: [[kurun]] ''f'', [[taran]] ''m''
@@ -31,10 +28,12 @@ From Anglo-Saxon '''''[[thunor]]'''''
 *[[Guaraní]]: [[sunu]]
 *Indonesian: [[gelegar]], [[suara]] [[petir]], [[suara halilintar]]
 *[[Interlingua]]: [[tonitro]]
-*Japanese: [[雷鳴]] ([[らいめい]], raimei)
+*Italian: [[tuono]]
+*Japanese: [[雷]] ([[かみなり]]、kaminari), [[雷鳴]] ([[らいめい]], raimei)
 *Norwegian: [[torden]]
 *Polish: [[grzmot]] ''m''
 *Portuguese: [[trovão]] ''m''
+*Russian: [[гром]] ''m'', [[грохот]] ''m''
 *Spanish: [[rugiente]]
 *Swedish: [[åskmuller]] ''n'' (2), [[muller]] ''n'' (2), [[mullrande]] ''n'' (3), [[åskdån]] ''n'' (2), [[dån]] ''n'' (2,3), (åsk)[[smäll]] ''c'' (1)
 *[[Tupinambá]]: [[tupã sununga]]
@@ -55,6 +54,7 @@ From Anglo-Saxon '''''[[thunor]]'''''
 *[[Guaraní]]: [[sunu]]
 *Indonesian: [[gelegar]]
 *[[Interlingua]]: [[tonar]]
+*Japanese: 雷が[[鳴る]] (かみなりが[[なる]]、kaminariga naru); [[怒鳴る]] ([[どなる]]、donaru)
 *Norwegian: [[tordne]]
 *Polish: [[zagrzmieć]] ''perf'', [[grzmieć]] ''imperf''
 *Portuguese: [[troar]], [[trovejar]]
@@ -62,6 +62,9 @@ From Anglo-Saxon '''''[[thunor]]'''''
 *[[Tupinambá]]: [[sunung]]
 
 ===Derived terms===
+*[[thunderbolt]]
+*[[thunderclap]]
+*[[thundercloud]]
 *[[thunderous]]
 
 [[Category:1000 English basic words]]
