--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -7,6 +7,7 @@
 ===Translations===
 *Dutch: [[beenmerg]] {{n}}
 *[[Esperanto]]: [[osta medolo]]
+*Finnish: [[luuydin]]
 *French : [[moelle osseuse]] {{f}}
 *Indonesian : [[sumsum tulang]]
 *Japanese : [[骨髄]] ([[こつずい]], kotsuzui)
