--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -1,6 +1,6 @@
 {{Wikipedia}}
 ==English==
-=== Etymology ===
+===Etymology===
 From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''prounon'', a variant form of ''proumnon'' meaning '''[[plum]]'''.
 
 ===Pronunciation===
@@ -12,7 +12,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *[[plumb]]
 
 ===Noun===
-'''plum''' (''plural'' '''[[plums]]''')
+'''plum''' (''plural:'' '''[[plums]]''')
 
 #(''also'' '''plum tree''') A [[stone-fruit]] tree of the ''[[Prunus]]'' family.
 #The [[fruit]] of the plum tree.
@@ -26,29 +26,33 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 ====Translations====
 '''tree'''
 {{top}}
-*Catalan: [[pruner]] ''m''
+*Catalan: [[pruner]] {{m}}
+*Dutch: [[pruimenboom]]
 *Finnish: [[luumupuu]]
-*Italian: [[prugno]] ''m''
+*Italian: [[prugno]] {{m}}
 {{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyō sumomo)
 *Spanish: [[ciruelo]]
-*Swedish: [[plommonträd]] ''n''
+*Swedish: [[plommonträd]] {{n}}
 {{bottom}}
 
 '''fruit'''
 {{top}}
-*Catalan: [[pruna]] ''f''
+*Catalan: [[pruna]] {{f}}
+*Dutch: [[pruim]]
+*[[Esperanto]]: [[pruno]]
 *Finnish: [[luumu]]
-*French: [[prune]] ''f''
-*Italian: [[prugna]] ''f''
+*French: [[prune]] {{f}}
+*Italian: [[prugna]] {{f}}
 {{mid}}
 *Japanese: [[セイヨウスモモ]] (seiyōsumomo), [[プラム]] (puramu)
 *Spanish: [[ciruela]]
-*Swedish: [[plommon]] ''n''
+*Swedish: [[plommon]] {{n}}
 {{bottom}}
 
 '''colour'''
 {{top}}
+*Dutch: [[donkerrood]] {{n}}
 {{mid}}
 *Japanese: [[暗紫色]] (あんししょく, anshishoku)
 {{bottom}}
@@ -63,7 +67,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 
 '''slang: testicle'''
 {{top}}
-*Catalan: pilotes, ous
+*Catalan: [[pilotes]], [[ous]]
 {{mid}}
 {{bottom}}
 
@@ -72,58 +76,57 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 *Arabic: [[برقوق]] (barqūq), [[خوخ]] (khaukh)
 *[[Binisayâ]]: [[sirwelas]]
-*Bosnian: [[šljiva]] ''f''
-*Bulgarian: [[слива]] (sliva) ''f'' (2)
+*Bosnian: [[šljiva]] {{f}}
+*Bulgarian: [[слива]] (sliva) {{f}} (2)
 *[[Burmese]]: [[မက္မန္းသီး]] (makmansii)
 *Chinese: [[李子]] (lǐzi)
-*Croatian: [[šljiva]] ''f'' (2, 1)
-*Czech: [[švestka]] ''f'', [[slíva]] ''f''
-*Dutch: [[pruimenboom]] (1), [[pruim]] (2), [[donkerrood]] (3), [[rozijn]] (5)
-*[[Old English]]: [[plūme]] ''f''
-*[[Esperanto]]: [[pruno]]
+*Croatian: [[šljiva]] {{f}} (2, 1)
+*Czech: [[švestka]] {{f}}, [[slíva]] {{f}}
+*[[Old English]]: [[plūme]] {{f}}
 *Estonian: [[ploom]]
 *[[Farsi]]: [[آلو]] (alu), [[گوجه]] (gujah)
 *[[Frisian]]: [[prom]] (2), [[rezyn]] (5)
-*Galician: [[ameixeira]] ''f'' (1), [[ameixa]] ''f'' (2)
-*German: [[Pflaume]] ''f''
+*Galician: [[ameixeira]] {{f}} (1), [[ameixa]] {{f}} (2)
+*German: [[Pflaume]] {{f}}
 *[[Middle High German|German, Middle High]]: [[pflūme]], [[pfrūme]]
 *[[Old High German|German, Old High]]: [[pfrūma]]
-*Greek: [[δαμασκηνιά]] (dhamaskiniá) ''f'' (1), [[δαμάσκηνο]] (dhamáskino) ''n'' (2)
-*Hebrew: [[שזיף]] (shozif) ''m''
+*Greek: [[δαμασκηνιά]] (dhamaskiniá) {{f}} (1), [[δαμάσκηνο]] (dhamáskino) {{n}} (2)
+*Hebrew: [[שזיף]] (shozif) {{m}}
 *Hindi: [[आलूचा]] (ālūcā)
 *Hungarian: [[szilva]]
-*Icelandic: [[plóma]] ''f''
-*Irish: [[pluma]] ''m'', [[prúna]] ''m''
-*Latin: [[prunum]] ''n''
-*Latvian: [[plūme]] ''f''
-*Lithuanian: [[slyva]] ''f'' (1, 2), [[slyvinis]] ''m'' (3)
-*Luxembourgish: [[Praum]] ''f'', [[Promm]] ''f''
+*Icelandic: [[plóma]] {{f}}
+*Irish: [[pluma]] {{m}}, [[prúna]] {{m}}
+*Latin: [[prunum]] {{n}}
+*Latvian: [[plūme]] {{f}}
+*Lithuanian: [[slyva]] {{f}} (1, 2), [[slyvinis]] {{m}} (3)
+*Luxembourgish: [[Praum]] {{f}}, [[Promm]] {{f}}
 *Norwegian: [[plomme]]
-*Polish: [[śliwka]] ''f'' (2), [[rodzynka]] ''f'' (5)
-*Portuguese: [[ameixa]] ''f'' (2)
-*Russian: [[слива]] (sliva) ''f'' (2)
+*Polish: [[śliwka]] {{f}} (2), [[rodzynka]] {{f}} (5)
+*Portuguese: [[ameixa]] {{f}} (2)
+*Russian: [[слива]] (sliva) {{f}} (2)
 *[[Sanskrit]]: [[कर्कन्धुः]] (karkandhuḥ)
-*Serbian: [[шљива]] (šljiva) ''f'' (2,1)
-*Slovakian: [[slivka]] ''f'' (2)
+*Serbian: [[шљива]] (šljiva) {{f}} (2,1)
+*Slovakian: [[slivka]] {{f}} (2)
 *Thai: [[ลูกพุทราฝรั่ง]] (luukphutrafrang)
 *Turkish: [[erik]]
 *Vietnamese: [[quả mận]], [[trái mơ]]
 *[[Volapük]]: [[plöm]]
-*Welsh: [[eirinen]] ''f''
+*Welsh: [[eirinen]] {{f}}
 *[[Zulu]]: [[iplamu]], [[ithungulu]]
 
 ===Adjective===
 '''plum'''
+
 #(colour) Of a dark bluish-red colour.
 
 ====Translations====
 '''colour'''
 {{top}}
-*Dutch: [[donkerrood]]
+*Dutch: [[donkerrood]], [[donkerrode]]
 *Finnish: [[luumunpunainen]]
 {{mid}}
 *Japanese: [[暗紫色]]の (あんししょくの, anshishoku no)
-*Romanian: [[prună]] ''f''
+*Romanian: [[prună]] {{f}}
 {{bottom}}
 
 ===Derived terms===
@@ -153,8 +156,7 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *[[plummy]]
 *[[Sugar Plum Fairy]]
 *[[victoria plum]]
-|}
-|}
+{{bottom}}
 
 
 ===See also===
@@ -182,15 +184,14 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *[[umeboshi]]
 *[[umesu]]
 *[[Wiktionary_Appendix:Colours|Appendix:Colours]]
-|}
-|}
+{{bottom}}
 
 [[Category:Colors]]
 [[Category:Purples]]
 [[Category:Fruits]]
 [[Category:Plants]]
 
-[[io:Plum]]
+[[io:plum]]
 [[it:plum]]
 [[hu:plum]]
 [[pl:plum]]
