--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -2,42 +2,42 @@
 ===Proper noun===
 '''[[United]] [[State]]s of [[America]]'''
 
-# Country in North America. Located between [[Canada]] and [[Mexico]].
+# Country in North America located between [[Canada]] and [[Mexico]].
 
 ====Abbreviation====
 *[[USA]]
 
 ====Translations====
 *[[Bosnian]]: Sjedinjene Američke Države ''f pl'' (SAD), Amerika ''f''
-*[[Breton]]: [[Stadoù-Unanet Amerika]] ''f, pl'', short : [[SUA]]
-*Bulgarian: [[Съединени Американски Щати]], short: [[САЩ]]
-*[[Catalan]]: [[Estats Units d'Amèrica]] ''m''
+*[[Breton]]: [[Stadoù-Unanet Amerika]] ''f pl'', [[SUA]]
+*Bulgarian: [[Съединени Американски Щати]], [[САЩ]]
+*[[Catalan]]: [[Estats Units d'Amèrica]] ''m pl''
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
 *Dansk: [[Amerikas Forenede Stater]]
-*Dutch: [[Verenigde Staten van Amerika]] ''f, pl'', abbreviation: [[VSA]]
+*Dutch: [[Verenigde Staten van Amerika]] ''f pl'', [[VSA]]
 *[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
-*Finnish: [[Amerikan Yhdysvallat]], short: [[Yhdysvallat]], very short: [[USA]]
-*French: [[États-Unis d'Amérique]] ''m, pl''
+*Finnish: [[Amerikan Yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
+*French: [[États-Unis d'Amérique]] ''m pl'', [[É-U]]
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
-*German: [[Vereinigte Staaten von Amerika]], short: [[USA]]
-*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', short: [[ΗΠΑ]]
-*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel America),  short: [[ארצות הברית]] (Artsot ha-Brit), very short: [[ארה"ב]]
-*[[Indonesia]]: [[Amerika Serikat]]
-*[[Irish]]: [[Meiriceá]] ''m4''
-*[[Italian]]: long form: Stati Uniti d'America, short form: Stati Uniti
-*Japanese: [[米国]] (べいこく, beikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, amerika gasshūkoku)
-*Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
+*German: [[Vereinigte Staaten von Amerika]], [[USA]]
+*Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[ΗΠΑ]]
+*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel America),  ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה"ב]] (Arh-B)
+*Indonesia: [[Amerika Serikat]]
+*[[Irish]]: [[Meiriceá]]
+*Italian: [[Stati Uniti d'America]], ''short:'' [[Stati Uniti]]
+*Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
+*Korean: [[미국]], South Korean: [美國], North Korean: [米國] (Mi-guk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]]
 *Malay: [[Amerika Syarikat]]
-*Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]], [[USA]]
-*Portuguese: [[Estados Unidos da América]] ''m pl'', short: [[Estados Unidos]] ''m pl'', very short: [[EUA]] ''m pl''
-*Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
-*Russian: [[Соединённые Штаты Америки]], short: [[США]]
-*Slovak: [[Spojené Štáty Americké]] ''m pl'', short: [[USA]]
-*Spanish: [[Estados Unidos de América]] ''m'' abbreviation: [[EEUU]]
+*Polish: [[Stany Zjednoczone Ameryki]], [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''colloquial:'' [[Stany]], [[USA]]
+*Portuguese: [[Estados Unidos da América]] ''m pl'', ''short:'' [[Estados Unidos]] ''m pl'', [[EUA]] ''m pl''
+*Romanian: [[Statele Unite ale Americii]], ''short:'' [[Statele Unite]], [[SUA]]
+*Russian: [[Соединённые Штаты Америки]], [[США]]
+*Slovak: [[Spojené Štáty Americké]] ''m pl'', [[USA]]
+*Spanish: [[Estados Unidos de América]] ''m sg'', ''short:'' [[Estados Unidos]], [[EEUU]] ''m sg''
 *Swedish: [[Amerikas förenade stater]]
 *Turkish: [[Amerika Birleşik Devletleri]], abbreviation: [[ABD]]
-*Vietnamese: [[Hợp Chủng Quốc Hoa Kỳ]], short: [[Mỹ]], abbreviation: [[HK]]
+*Vietnamese: [[Hợp Chủng Quốc Hoa Kỳ]], ''short:'' [[Mỹ]], [[HK]]
 
 ===See also===
 *[[Countries of the world]]
