/* Proper noun */ <United States of America#611464>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,14 +1,14 @@
 ==English==
 ===Proper noun===
-'''[[United]] [[State]]s of [[America]]'''
+'''[[United]] [[State]]s of [[America]]''' ''(construed as singular)''
 
-# Country in North America located between [[Canada]] and [[Mexico]].
+# Country in [[North America]] located between [[Canada]] and [[Mexico]].
 
 ====Abbreviation====
 *[[USA]]
 
 ====Translations====
-*[[Bosnian]]: Sjedinjene Američke Države ''f pl'' (SAD), Amerika ''f''
+*[[Bosnian]]: [[Sjedinjene Američke Države]] ''f pl'', [[Amerika]] ''f'', [[SAD]]
 *[[Breton]]: [[Stadoù-Unanet Amerika]] ''f pl'', [[SUA]]
 *Bulgarian: [[Съединени Американски Щати]], [[САЩ]]
 *[[Catalan]]: [[Estats Units d'Amèrica]] ''m pl''
@@ -21,12 +21,12 @@
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *German: [[Vereinigte Staaten von Amerika]], [[USA]]
 *Greek: [[Ηνωμένες Πολιτείες της Αμερικής]] ''f pl'', [[ΗΠΑ]]
-*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel America),  ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה"ב]] (Arh-B)
+*Hebrew: [[ארצות הברית של אמריקה]] (Artsot ha-Brit shel America),  ''short:'' [[ארצות הברית]] (Artsot ha-Brit), ''abbr.:'' [[ארה"ב]] (ARH-B)
 *Indonesia: [[Amerika Serikat]]
 *[[Irish]]: [[Meiriceá]]
 *Italian: [[Stati Uniti d'America]], ''short:'' [[Stati Uniti]]
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
-*Korean: [[미국]], South Korean: [美國], North Korean: [米國] (Mi-guk)
+*Korean: [[미국]] (Mi-guk), South Korean: [美國], North Korean: [米國] (Mi-guk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]]
 *Malay: [[Amerika Syarikat]]
 *Polish: [[Stany Zjednoczone Ameryki]], [[Stany Zjednoczone Ameryki Północnej]], ''short:'' [[Stany Zjednoczone]], ''colloquial:'' [[Stany]], [[USA]]
@@ -36,7 +36,7 @@
 *Slovak: [[Spojené Štáty Americké]] ''m pl'', [[USA]]
 *Spanish: [[Estados Unidos de América]] ''m sg'', ''short:'' [[Estados Unidos]], [[EEUU]] ''m sg''
 *Swedish: [[Amerikas förenade stater]]
-*Turkish: [[Amerika Birleşik Devletleri]], abbreviation: [[ABD]]
+*Turkish: [[Amerika Birleşik Devletleri]], [[ABD]]
 *Vietnamese: [[Hợp Chủng Quốc Hoa Kỳ]], ''short:'' [[Mỹ]], [[HK]]
 
 ===See also===
