--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -39,6 +39,7 @@
 *Indonesian: [[tarung]], [[tengkar]], [[serang]]
 *Italian: [[lotta]]
 *Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
+*Latin: [[pugnare]]
 *Romanian: [[luptă]] {{f}}, [[bătaie]] {{f}}
 *Swedish: [[slåss]]
 {{bottom}}
