--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -65,6 +65,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 *{{es}}: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
 *{{sk}}: [[krásny]] ''m'', krásna ''f'', krásne ''n''
 *{{sv}}: [[vacker]]
+*{{vi}}: [[đẹp]], [[đẹp đẽ]]
 *Turkish: [[güzel]]
 
 [[Category:1000 English basic words]]
