--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -22,6 +22,7 @@
 *[[Slovene]]: [[veja]] ''f'' (1,2)
 *Swedish: [[bransch]] (3)
 *Turkish: [[dal]] (1, 2, 4), [[şube]] (3)
+*{{vi}}: [[nhánh]] (1, 3, 4)
 
 ====Related Terms====
 *[[branch banking]]
