--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -62,6 +62,7 @@
 *Slovak: [[most#Slovak|most]] ''m''
 *Spanish: [[puente]] ''m''
 *Swedish: [[bro#Swedish|bro]] ''c''
+*{{vi}}: [[cầu]]
 *Turkish: [[köprü]]
 {{bottom}}
 
