--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -1,10 +1,10 @@
 ==English==
 {{wikipedia}}
 ===Pronunciation===
-*British English IPA: [ˈdʒɜːmənɪ]
-*British English SAMPA: /dZ3:m@nI/
-*US English IPA: [ˈdʒɜːrmənɪ]
-*US English SAMPA: /dZ3`:mIni/
+*British {{IPA|[ˈdʒɜːmənɪ]}}
+*British {{SAMPA|/dZ3:m@nI/}}
+*US {{IPA|[ˈdʒɜːrmənɪ]}}
+*US {{SAMPA|/dZ3`:mIni/}}
 
 ===Proper noun===
 '''Germany'''
@@ -13,7 +13,7 @@
 
 ====Translations====
 {{top}}
-*Arabic: [[المانيا]] (almāniyā)
+*Arabic: {{ARchar|[[المانيا]]}} (Almánya) {{f}}
 *Bosnian: [[Njemačka]] {{f}}
 *Breton: [[Alamagn]]
 *Catalan: [[Alemanya]]
@@ -24,13 +24,12 @@
 *Dutch: [[Duitsland]] ''n''
 *Esperanto: [[Germanio]], [[Germanujo]]
 *Estonian: [[Saksamaa]]
-*Farsi: [[مملکت المان]]
 *Finnish: [[Saksa]]
 *French: [[Allemagne]] ''f''
 *Frisian: [[Dútslân]] ''n''
 *German: [[Deutschland]] ''n''
-*Middle High German: [[Tiutschlant]] ''n'', [[Tiutschlant]] ''n''
-*Greek: [[Γερμανία]] ''f''
+*Middle High German: [[Tiutschlant]] ''n''
+*Greek: [[Γερμανία]] (Germanía) ''f''
 *Hawaiian: [[Kelemānia]]
 *Hebrew: [[גרמניה]] (Germania) ''f''
 *Hungarian: [[Németország]]
@@ -39,32 +38,33 @@
 *Interlingua: [[Germania]]
 *Irish: [[an Ghearmáin]] ''f''
 *Italian: [[Germania]] ''f''
+*Japanese: [[ドイツ]], [[独逸]] (Dóitsu)
 {{mid}}
-*Japanese: [[ドイツ]], [[独逸]] (Doitsu)
 *Khmer: [[ឤលឺម៉ង់]] (āllīmang)
 *Korean: [[독일]] (dog-il), [[독일국]] (dog-il-guk)
 *Latin: [[Germania]] ''f''
 *Latvian: [[Vācija]] ''f''
-*Luxembourgish: [[Däitschland]] ''n''
+*[[Luxembourgish]]: [[Däitschland]] ''n''
 *Malay: [[Jerman]]
 *[[Maldivian]]: Jarumanu Vilay
+*Persian: {{FAchar|[[مملکت المان]]}} (mamlekat Alman)
 *Polish: [[Niemcy]]
 *Portuguese: [[Alemanha]] ''f''
 *Romanian: [[Germania]] ''f''
-*Russian: [[Германия]] (Germaniya) ''f'' 
+*Russian: [[Германия]] (Germánija) {{f}}
 *Serbian:
 *:Cyrillic: [[Немачка]] {{f}}
 *:Latin: [[Nemačka]] {{f}}
 *Slovak: [[Nemecko]] ''n''
 *Slovene: [[Nemčija]] ''f''
 *Spanish: [[Alemania]] ''f''
-*Swahili: [[Ujerumani]] ''6''
+*Swahili: [[Ujerumani]] ''(noun 6)''
 *Swedish: [[Tyskland]]
-*Thai: [[ชาวเยอรมัน]] (chaw-Yoermen)
+*Thai: {{THchar|[[ชาวเยอรมัน]]}} (chaw-Yoermen)
 *Turkish: [[Almanya]]
 *Vietnamese: [[nước Đức]]
 *Welsh: [[yr Almaen]] ''f''
-*Xhosa: [[iJamani]] ''5''
+*[[Xhosa]]: [[iJamani]] ''(noun 5)''
 *Yiddish: [[Daytshland]] 
 {{bottom}}
 
