--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -12,6 +12,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 #A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''
 
 ====Translations====
+{{top}}
 *[[Bosnian]]: Novi Zeland ''m''
 *[[Breton]]: [[Zeland-Nevez]]
 *Bulgarian: [[Нова Зеландия]]
@@ -29,9 +30,11 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]] ''f''
+{{mid}}
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Latin:  [[Nova Zelanda]]
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
+*Norwegian: [[#Norwegian|New Zealand]], [[Ny-Zealand]]
 *Polish: [[Nowa Zelandia]]
 *Portuguese: [[Nova Zelândia]]
 *Romanian: [[Noua Zeelandă]] ''f''
@@ -40,6 +43,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Spanish: [[Nueva Zelanda]] ''f''
 *Swedish: [[Nya Zeeland]]
 *Turkish: [[Yeni Zelanda]]
+{{bottom}}
 
 ====Derived terms====
 *[[New Zealander]]
@@ -52,6 +56,14 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *[[Countries of the world]]
 *[[w:New Zealand|Wikipedia article about New Zealand]]
 [[Category:English country nouns]]
+
+==Norwegian==
+===Proper noun===
+[[Category:no:Countries]]
+'''New Zealand'''
+#[[#English|New Zealand]]
+====Synonyms====
+*[[Ny-Zealand]]
 
 [[io:New Zealand]]
 [[hu:New Zealand]]
