--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -17,6 +17,7 @@ From Old English [[ceosan|ċēosan]].
 *[[chosen]]
 
 ==== Translations ====
+*Danish: [[vælge]]
 *Dutch: [[kiezen]]
 *Esperanto: [[elekti]]
 *Finnish: [[valita]]
