robot  Adding: fi, gl <cut#619519>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -88,7 +88,10 @@ Danish: [[snit]] (1,2,3,4,5,7), [[hug]] (1,2), tage af (6), [[skår]] (''glass, 
 ===Adjective===
 '''cut'''
 # {{Cricket}} of a shot played with a [[horizontal]] bat to hit the ball backward of point.
+
 [[es:cut]]
+[[gl:Cut]]
 [[io:Cut]]
 [[it:cut]]
 [[pt:Cut]]
+[[fi:cut]]
