--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -20,6 +20,7 @@
 *French: [[beurre]] ''m''
 *German: Butter ''f''
 *Greek: [[βούτυρο]]
+*Hungarian: [[vaj]]
 *Interlingua: [[butyro]]
 *Italian: [[burro]] ''m''
 {{mid}}
