--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -29,7 +29,7 @@
 *Italian: [[penna]] ''f''
 *Japanese: [[ペン]] (pen)
 *Koryese: ir
-*Polish: [[pióro]]
+*Polish: [[pióro]] ''n'', [[długopis]] ''m''
 *Portuguese: [[caneta]] ''f''
 *Russian: [[ручка]] ''f''
 *Spanish: [[pluma]] ''f''
