minor fmt, {{gender}}, dewikify common langs <spelt#623110>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -1,41 +1,38 @@
-=== Pronunciation ===
+==English==
+
+===Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'spεlt/
 
-=== Verb ===
-
+===Verb===
 '''spelt'''
-
 # past tense of to [[spell]]
 
-=== Translations ===
-*[[Dutch]]: [[spelde]], [[spelden]]
+===Translations===
+*Dutch: [[spelde]], [[spelden]]
 
-=== Verb ===
-
+===Verb===
 '''spelt'''
-
 # past participle of to spell
 
-=== Translations ===
-*[[Dutch]]: [[gespeld]]
-*[[Spanish]]: [[deletreado]] ''m'', [[deletreada]] ''f''
+===Translations===
+*Dutch: [[gespeld]]
+*Spanish: [[deletreado]] {{m}}, [[deletreada]] {{f}}
 
-=== Noun ===
-
+===Noun===
 '''spelt'''
 
 # A type of [[wheat]], ''Triticum aestivum spelta''
 
-=== Translations ===
-*[[Dutch]]: spelt
-*German: [[Dinkel]] ''m''
+===Translations===
+*Dutch: spelt
+*German: [[Dinkel]] {{m}}
+
 ----
 
-==[[Dutch]]==
-
-'''spelt''' ''n''
-
+==Dutch==
+===Noun===
+'''spelt''' {{n}}
 # kind of [[cereal]]
 
 [[nl:spelt]]
