-'always yelled' <cut#624031>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -5,7 +5,7 @@
 
 ===Interjection===
 '''cut'''
-#(''film'') Instruction to cease all recording activities immediately.  Note: Always yelled.
+#(''film'') Instruction to cease all recording activities immediately.
 ====Translations====
 {{top}}
 *German: [[Schnitt]] ''m''
@@ -62,7 +62,7 @@
 *[[cut down]]
 
 ===Noun===
-{{sb|'''cut'''|'''[[cuts]]'''}}
+{{sb|cut|cuts}}
 # An opening resulting from cutting.
 #:''Look at this '''cut''' on my finger!''
 # The act of [[cutting]].
