--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -46,7 +46,7 @@
 
 ====Translations====
 
-*{{vi}}: [[quẹt]] bơ
+*{{vi}}: [[quẹt]] bơ (vào)
 
 =====Translations to be categorized=====
 {{checktrans}}
