--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -23,33 +23,49 @@ From Latin ''icon'', from Greek ''eikon'', '''image'''
 ==== Translations ====
 '''image'''
 {{top}}
+*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]], [[symboli]]
-*Polish: [[ikona]] ''f''
+*Polish: [[ikona]] {{f}}
 {{mid}}
+*Serbian:
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''religious painting'''
 {{top}}
+*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[ikoni]]
-*Polish: [[ikona]] ''f''
+*Polish: [[ikona]] {{f}}
 {{mid}}
+*Serbian:
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''the best example of something'''
 {{top}}
+*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Finnish: [[symboli]], [[ikoni]]
-*Polish: [[ikona]] ''f'', [[symbol]] ''m''
+*Polish: [[ikona]] {{f}}, [[symbol]] {{m}}
 {{mid}}
+*Serbian:
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 '''small picture'''
 {{top}}
+*Bosnian: [[ikona#Bosnian|ikona]] {{f}}
 *Dutch: [[icoon]] {{n}}
 *Finnish: [[kuvake]]
-*Polish: [[ikona]] ''f'', [[ikonka]] ''f''
+*Polish: [[ikona]] {{f}}, [[ikonka]] {{f}}
 {{mid}}
+*Serbian:
+*:Cyrillic: [[икона#Serbian|икона]] {{f}}
+*:Latin: [[ikona#Serbian|ikona]] {{f}}
 {{bottom}}
 
 These translations need to be checked by someone:
