--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Pronunciation===
-*[[RP]]: "nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/, /<tt>%nju:"zi:l@nd</tt>/
-*(''US''): "n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/, /<tt>%n(j)u:"zi:l@nd</tt>/
+*[[RP]]: {{IPAchar|"nyoo͞-zē'lənd, /ˌnjuːˈziːlənd/}}, /<tt>%nju:"zi:l@nd</tt>/
+*(''US''): {{IPAchar|"n(y)oo͞-zē'lənd, /ˌn(j)uːˈziːlənd/}}, /<tt>%n(j)u:"zi:l@nd</tt>/
 
 ===Etymology===
 From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
@@ -9,38 +9,38 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 ===Proper noun===
 '''New Zealand'''
 
-#A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''
+#A country in [[Oceania]], to the east of [[Australia]]. Official name: New Zealand.  Abbreviation: '''NZ'''.
 
 ====Translations====
 {{top}}
-*[[Bosnian]]: Novi Zeland ''m''
+*[[Bosnian]]: Novi Zeland {{m}}
 *[[Breton]]: [[Zeland-Nevez]]
-*Bulgarian: [[Нова Зеландия]]
-*Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]]
+*Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
+*Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]] (Xīn Xīlán)
 *Czech: [[Nový Zéland]]
 *Danish: New Zealand
 *Dutch: [[Nieuw-Zeeland]]
 *[[Esperanto]]: [[Nov-Zelando]]
 *Estonian: [[Uus-Meremaa]]
 *Finnish: [[Uusi-Seelanti]]
-*French: [[Nouvelle-Zélande]] ''f''
-*German: [[Neuseeland]] ''n''
-*Greek: [[Νέα Ζηλανδία]] ''f''
+*French: [[Nouvelle-Zélande]] {{f}}
+*German: [[Neuseeland]] {{n}}
+*Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
 *[[Hungarian]]: [[Új-Zéland]]
 *[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
-*Italian: [[Nuova Zelanda]] ''f''
+*Italian: [[Nuova Zelanda]] {{f}}
 {{mid}}
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
-*Latin:  [[Nova Zelanda]]
+*Latin: [[Nova Zelanda]] {{f}}
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
 *Norwegian: [[#Norwegian|New Zealand]], [[Ny-Zealand]]
-*Polish: [[Nowa Zelandia]]
-*Portuguese: [[Nova Zelândia]]
-*Romanian: [[Noua Zeelandă]] ''f''
-*Russian: [[Новая Зеландия]] ''f''
-*Slovene: [[Nova Zelandija]] ''f''
-*Spanish: [[Nueva Zelanda]] ''f''
+*Polish: [[Nowa Zelandia]] {{f}}
+*Portuguese: [[Nova Zelândia]] {{f}}
+*Romanian: [[Noua Zeelandă]] {{f}}
+*Russian: [[Новая Зеландия]] (Nóvaja Zelándija) {{f}}
+*Slovene: [[Nova Zelandija]] {{f}}
+*Spanish: [[Nueva Zelanda]] {{f}}
 *Swedish: [[Nya Zeeland]]
 *Turkish: [[Yeni Zelanda]]
 {{bottom}}
