--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -28,6 +28,7 @@
 {{top}}
 *Dutch: [[vinden]]
 *[[Esperanto]]: [[trovi]]
+*Finnish: [[löytää]]
 *German: [[finden]]
 *French: [[trouver]]
 *Italian: [[trovare]]
@@ -43,6 +44,7 @@
 '''point out'''
 {{top}}
 *Dutch: [[vinden]], [[ontdekken]]
+*Finnish: [[osoittaa]]
 {{mid}}
 *Russian: [[выискивать]]
 {{bottom}}
@@ -50,6 +52,7 @@
 '''decide that'''
 {{top}}
 *Dutch: [[vinden]], [[van mening zijn]] dat
+*Finnish: [[pitää]]
 {{mid}}
 *Russian: [[находить]]
 {{bottom}}
@@ -69,7 +72,6 @@
 
 *Danish: [[finde]]
 *[[Faroese]]: [[koma]] [[framá]] (1,3), [[gera]] [[vart]] [[við]], [[taka fram]] (2), [[gera]] [[av]] (4), [[halda]] [[at]] [[vera]] (5), [[døma]] (6, 7)
-*Finnish: [[löytää]] (1)
 *[[Ido]]: [[trovar]]
 *Indonesian: [[temu]], [[temu|menemukan]], [[temu|menemui]]
 *Portuguese: [[achar]], [[encontrar]] (1,2), [[achar]] (3), [[julgar]]
