--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -14,7 +14,7 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 
 ====Translations====
 {{top}}
-*[[Bosnian]]: Novi Zeland {{m}}
+*Bosnian: [[Novi Zeland#Bosnian|Novi Zeland]] {{m}}
 *[[Breton]]: [[Zeland-Nevez]]
 *Bulgarian: [[Нова Зеландия]] (Nóva Zelándija) {{f}}
 *Chinese: [[新西蘭]]/[[新西兰]], [[紐西蘭]] (Xīn Xīlán)
@@ -27,11 +27,11 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *French: [[Nouvelle-Zélande]] {{f}}
 *German: [[Neuseeland]] {{n}}
 *Greek: [[Νέα Ζηλανδία]] (Néa Zilandía) {{f}}
-*[[Hungarian]]: [[Új-Zéland]]
+*Hungarian: [[Új-Zéland]]
 *[[Indonesian]]: [[Selandia Baru]]
-{{mid}}
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]] {{f}}
+{{mid}}
 *Japanese: [[ニュージーランド]], [[新西蘭]] (Nyū Jīrando)
 *Latin: [[Nova Zelanda]] {{f}}
 *[[Maori]]: [[Aotearoa]], [[Niu Tireni]]
@@ -40,6 +40,9 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 *Portuguese: [[Nova Zelândia]] {{f}}
 *Romanian: [[Noua Zeelandă]] {{f}}
 *Russian: [[Новая Зеландия]] (Nóvaja Zelándija) {{f}}
+*Serbian:
+*:Cyrillic: [[Нови Зеланд#Serbian|Нови Зеланд]] {{m}}
+*:Latin: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
 *Slovene: [[Nova Zelandija]] {{f}}
 *Spanish: [[Nueva Zelanda]] {{f}}
 *Swedish: [[Nya Zeeland]]
