defns; fmt <fight#629590>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -6,34 +6,39 @@
 *:[[Rhymes:English:-aɪt|Rhymes: -aɪt]]
 
 ===Noun===
-'''fight'''  (''plural:'' '''[[fights]]''')
-# A battle.
+{{en-noun|fight|fights}}
+# A [[physical]] [[confrontation]].
+# A [[battle]].
 # A playground [[tussle]].
-# {{cattag|Sports}} A [[boxing match]].
+# {{cattag|Sports}} A [[martial arts]] [[match]].
 
 ====Translations====
 {{top}}
-*Danish: [[kamp]] {{c}} (1,2,3)
+*Danish: [[kamp]] {{c}} (2,3,4)
 *Dutch: [[gevecht]] {{n}}
-*Finnish: [[tappelu]] (1), [[ottelu]] (3)
+*Finnish: [[tappelu]] (2), [[ottelu]] (4)
 *French: [[bagarre]] {{f}}, [[combat]]
+*German: [[Kampf]] ''m'' (1,4), [[Gefecht]] ''n'' (2), [[Keilerei]] ''f'' (3)
 {{mid}}
-*German: [[Kampf]] {{m}} (1,2,3)
 *Polish: [[walka]] {{f}}
 *Spanish: [[lucha]]
 {{bottom}}
 
 ===Verb===
-'''to fight''' ([[fought]], [[fighting]])
-# to attack, to battle, to struggle
-
+{{irregverb|'''to fight'''|'''[[fights]]'''|'''[[fought]]'''|'''[[fought]]'''|'''[[fighting]]'''}}
+#''(intransitive)'' To be [[involve]]d in a [[physical]] [[confrontation]].
+#:''The two boxers have been '''fighting''' for more than half an hour.''
+#''(transitive)'' To [[try]] to [[overpower]]; to [[fiercly]] [[counteract]].
+#:''The government pledged to '''fight''' corruption.''
 ====Translations====
+*German: [[kämpfen]] (1), [[bekämpfen]] (2)
+
+====Translations to be checked====
 {{top}}
 *Danish: [[kæmpe]]
 *Dutch: [[vechten]]
 *Finnish: [[tapella]]
 *French: [[attaquer]], [[se battre]], [[combattre]]
-*German: [[kämpfen]]
 *Hebrew: [[קרב]]
 {{mid}}
 *Indonesian: [[tarung]], [[tengkar]], [[serang]]
