--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -195,8 +195,11 @@
 
 [[Category:1000 English basic words]]
 
-[[ang:play]]
+[[ang:Play]]
 [[es:play]]
-[[io:play]]
+[[io:Play]]
 [[it:play]]
 [[pl:play]]
+[[pt:Play]]
+[[ru:Play]]
+[[fi:play]]
