/* English */ translate into slovene <play#632605>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -21,6 +21,7 @@
 *French: [[jouer]]
 *German: [[spielen]]
 *Italian: [[giocare]]
+*Slovene: [[igrati se]]
 {{mid}}
 {{bottom}}
 
@@ -30,6 +31,7 @@
 *Catalan: [[tocar]]
 *Dutch: [[spelen]]
 *German: [[spielen]]
+*Slovene: [[igrati]]
 {{mid}}
 {{bottom}}
 
@@ -43,6 +45,7 @@
 *Catalan: [[actuar]]
 *Dutch: [[optreden]]
 *German: [[spielen]]
+*Slovene: [[igrati]]
 {{mid}}
 {{bottom}}
 
@@ -64,7 +67,6 @@
 *Portuguese: [[jogar]]
 *Russian: [[играть]]
 *Slovak: [[hrať sa]]
-*Slovene: [[igrati se]]
 *Spanish: [[jugar]]
 *Swedish: [[leka]] (1), [[spela]] (1,2,4)
 *[[Tupinambá]]: [[nhemosaraîa]]
@@ -109,6 +111,7 @@
 *Finnish: [[pelata]]
 *French: [[jouer]] à
 {{mid}}
+*Slovene: [[igrati]]
 *Spanish: [[jugar]] a
 *Swedish: [[leka]], [[spela]]
 {{bottom}}
@@ -121,6 +124,7 @@
 *French: [[jouer]] de
 {{mid}}
 *Italian: [[suonare]]
+*Slovene: [[igrati]]
 *Swedish: [[spela]]
 {{bottom}}
 
@@ -130,6 +134,7 @@
 *Finnish: [[toistaa]]
 *French: [[jouer]]
 {{mid}}
+*Slovene: [[predvajati]]
 *Swedish: [[spela]], [[spela upp]]
 {{bottom}}
 
@@ -139,7 +144,6 @@
 
 *Arabic: (1) [[يعزف]]  (2), [[يتمرن]]
 * Slovak: [[hrať]]
-*Slovene: [[igrati]] (1, 2)
 
 ====Derived terms====
 *[[play along]]
@@ -163,11 +167,13 @@
 *German: [[Schauspiel]] {{n}}
 {{mid}}
 *Italian: [[dramma]] {{m}}
+*Slovene: [[igra]]
 {{bottom}}
 
 '''individual's performance in a sport'''
 {{top}}
 *Dutch: [[spelbeweging]] {{f}}
+*Slovene: [[igra]]
 {{mid}}
 {{bottom}}
 
@@ -184,7 +190,6 @@
 *German: [[Spielzug]] {{m}} (2)
 *Polish: [[sztuka]] {{f}} (1)
 *Slovak [[hra]] (1, 2)
-*Slovene: [[igra]] {{f}} (1)
 *Swedish: [[pjäs]] {{c}} (1)
 
 ====Derived terms====
