/* Related terms */ [[cut off]], [[cut up]], [[cut out]] <cut#639706>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -60,6 +60,9 @@
 ====Related terms====
 *[[cut for one’s size]]
 *[[cut down]]
+*[[cut off]]
+*[[cut out]]
+*[[cut up]]
 
 ===Noun===
 {{sb|cut|cuts}}
