--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -18,6 +18,7 @@
 *[[Indonesian]]: [[cabang]]
 *Italian: [[ramo]] {{m}}, [[filiale]] {{f}}
 *Japanese: [[枝]] ([[えだ]], eda) (of tree), [[支店]] ([[してん]], shiten) (of company)
+*Old English: [[bog|bōg]] {{n}}
 *Polish: [[gałąź]] {{f}}
 *[[Slovene]]: [[veja]] {{f}} (1,2)
 *Swedish: [[bransch]] (3)
