moved abbrev; alpha pos; templates; anagrams; tweak <stab#641430>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -1,22 +1,25 @@
 ==English==
+
 ===Etymology===
 Middle English
-===Transitive Verb===
-# Pierce, wound, with (usually short) pointed tool or [[weapon]] e.g. [[knife]] or [[dagger]]; aim blow with such weapon (''at''); inflict sharp pain on (person, his feelings, conscience, etc.), aim blow ''at'' (reputation, person etc.)
+
 ===Noun===
+{{en-noun-reg}}
 # Act of stabbing, blow or thrust with knife etc., wound thus made, blow or pain inflicted on person's feelings
 # [[attempt]], [[try]]
 #:''I'll give this thankless task a '''stab'''''
 
-===[[Abbreviation]]===
-STAB
-#Sociedade dos Técnicos Açucareiros e Alcooleiros do Brasil (Portugues)
-#:'''Translations''' (foreign equivalents)
-#:*[[English]]: [[Society of Sugar and Alcohol Technologists of Brazil]]
+===Transitive verb===
+'''stab'''
+# Pierce, wound, with (usually short) pointed tool or [[weapon]] e.g. [[knife]] or [[dagger]]; aim blow with such weapon (''at''); inflict sharp pain on (person, his feelings, conscience, etc.), aim blow ''at'' (reputation, person etc.)
 
+===Anagrams===
+*[[tabs]]
+
+----
 ==Danish==
 ===Noun===
-'''stab''' ''c''
+'''stab''' {{c}}
 
 # [[staff]]
 
