--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -31,6 +31,7 @@
 {{top}}
 *Catalan: [[tocar]]
 *Dutch: [[spelen]]
+*French: [[jouer]]
 *German: [[spielen]]
 *Slovene: [[igrati]]
 *Spanish: [[tocar]]
