/* Verb */ expand <stomach#642205>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -18,9 +18,10 @@
 *Russian: [[желудок]] ''m'' (želúdok)
 *Spanish: [[estómago]] ''m''
 
-===Verb===
+===Transitive verb===
 {{en-infl-reg-consonant|stomach||}}
-# To be able to handle something, either emotionally or mentally.
+# To be able to [[tolerate]] something, either emotionally or mentally; to [[stand]] or [[handle]] something.
+#:''I really can't '''stomach''' jobs involving that much paperwork, but some people seem to tolerate them.''
 
 ===See also===
 *[[abdomen]]
