--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -4,7 +4,7 @@
 */krēp/, /kriːp/, /kri:p/
 
 ===Noun===
-'''creep'''  (''plural:'' '''[[creeps]]''')
+{{en-noun|creep|creeps}}
 # The movement of something that creeps.
 # A gradual change in anything.
 ## (''publishing'') In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
@@ -12,10 +12,7 @@
 # (''informal'') A annoyingly [[unpleasant]] person.
 #: ''Stop following me, you creep!''
 
-
-
 ====Translations====
-
 '''movement of something that creeps'''
 {{top}}
 *Dutch: [[kruip]] {{m}}
@@ -35,7 +32,7 @@
 {{bottom}}
 
 ===Verb===
-{{en-infl-irreg|creep|creeps|creeping|crept|crept}}
+{{irregverb|'''to creep'''|'''[[creeps]]'''|'''[[crept]]'''|'''[[crept]]'''|'''[[creeping]]'''}}
 # ''(transitive):'' To move slowly with the [[abdomen]] close to the ground.
 #: ''Lizards and snakes '''crept''' over the ground.''
 # ''(transitive):'' Of [[plant]]s, to grow across a surface rather than upwards.
