--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -7,7 +7,7 @@
 *{{audio|en-us-speak.ogg|Audio (US)}}
 
 ===Verb===
-{{en-infl-irreg|speak|speaks|speaking|spoke|spoke}}; {{archaic}}: [[spake]]
+{{irregverb|'''to speak'''|'''[[speaks]]'''|'''[[spoke]] '''or, archaic,''' [[spake]]'''|'''[[spoken]]'''|'''[[speaking]]'''}}
 
 # to [[communicate]] by the use of sounds that are are interpreted as language; to communicate verbally.
 # to make sounds with the vocal chords.
@@ -18,6 +18,16 @@
 # to deliver a message to a group; to deliver a [[speech]].
 # to have the command of a language.
 #:''He '''speaks''' Klingon fluently''.
+====Synonyms====
+*[[articulate]]
+*[[talk]]
+*[[verbalize]]
+
+====Related terms====
+*[[speak of the devil]]
+*[[speaker]]
+*[[speech]]
+
 
 ====Translations====
 {{top}}
@@ -49,19 +59,6 @@
 
 ===Anagrams===
 *[[peaks]]
-
-===Idioms===
-*[[speak of the devil]]
-
-===Synonyms===
-*[[articulate]]
-*[[talk]]
-*[[verbalize]]
-
-===Related terms===
-*[[speaker]]
-*[[speech]]
-
 
 [[Category:Communication]]
 
