--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -157,8 +157,8 @@
 ** Hex: A661
 ** Decimal: 42593
 
+[[Category:Chinese hanzi]]
 [[Category:Japanese kanji]]
-[[Category:Kanji]]
 
 [[fr:地]]
 [[hu:地]]
