--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -191,7 +191,8 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 [[Category:Fruits]]
 [[Category:Plants]]
 
-[[io:plum]]
+[[io:Plum]]
 [[it:plum]]
 [[hu:plum]]
+[[ja:plum]]
 [[pl:plum]]
