--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -22,6 +22,7 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 *Chinese: [[等]] (deng)
 *Danish: [[og så videre]], [[osv.]] abbreviation of [[og så videre]],
 *Dutch: [[enzovoort]], [[enz.]], et cetera, [[enzovoorts]]
+*Estonian: [[jne.]] abbreviation of [[ja nii edasi]]
 *Finnish: [[jne.]] abbreviation of [[ja niin edelleen]]
 *French: [[et cétéra]]
 *German: [[und cetera]], [[usw.]], [[und so weiter]]
