--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -21,38 +21,44 @@
 *French: [[jouer]]
 *German: [[spielen]]
 *Italian: [[giocare]]
+{{mid}}
 *Russian: [[играть]]
 *Slovene: [[igrati se]]
 *Spanish: [[jugar]]
-{{mid}}
 {{bottom}}
 
 '''produce music using  a musical instrument'''
 <!--Note: this an INTRANSITIVE sense-->
 {{top}}
+<!--Put translations for languages from A to I here-->
 *Catalan: [[tocar]]
 *Dutch: [[spelen]]
 *French: [[jouer]]
 *German: [[spielen]]
+{{mid}}
+<!--Put translations for languages from J to Z here-->
 *Russian: [[играть]]
 *Slovene: [[igrati]]
 *Spanish: [[tocar]]
-{{mid}}
 {{bottom}}
 
 '''deal with a situation in a diplomatic manner'''
 {{top}}
+<!--Put translations for languages from A to I here-->
 {{mid}}
+<!--Put translations for languages from J to Z here-->
 {{bottom}}
 
 '''act in a performance'''
 {{top}}
+<!--Put translations for languages from A to I here-->
 *Catalan: [[actuar]]
 *Dutch: [[optreden]]
 *German: [[spielen]]
+{{mid}}
+<!--Put translations for languages from A to Z here-->
 *Russian: [[играть]]
 *Slovene: [[igrati]]
-{{mid}}
 {{bottom}}
 
 =====Translations to be checked=====
