+defn from removed interjection seciton <cut#652427>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -3,8 +3,6 @@
 *[[w:SAMPA|SAMPA]]: /<tt>"kVt</tt>/
 *[[w:IPA|IPA]]: /kʌt/
 
-
-
 ===Verb===
 {{irregverb|'''to cut'''|'''[[cuts]]'''|'''cut'''|'''cut'''|'''[[cutting]]'''}}
 # To [[perform]] an [[incision]] with for example a [[knife]] ("I '''cut''' the skin on my arm.")
@@ -20,6 +18,7 @@
 #''(Geometry)'': To intersect; to cross, as one line '''cuts''' across another.
 # To skip a class. (Usually as "cut-out of".)  ("I '''cut''' fifth period to hang out with Angela.")
 # To change direction suddenly (in a [[route]]); to make a sudden [[sprint]] in order to [[evade]] the [[defense]]
+#(''filmmaking'') To [[cease]] [[record]]ing activities.
 
 ====Derived Terms====
 *[[cutting edge]]
