/* Translations */ +latin <speak#655306>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -48,6 +48,7 @@
 *[[Interlingua]]: [[parlar]]
 *Italian: [[parlare]]
 *Japanese: [[話す]] ([[はなす]], hanasu)
+*Latin: [[dicere]]
 *Portuguese: [[falar]]
 *Russian: [[говорить]] /govorit'/
 *Slovak: [[rozprávať]], [[hovoriť]]
