--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -16,7 +16,7 @@
 *Chinese: [[美利坚合众国]]/[[美利堅合衆國]] (Měilìjiān Hézhòngguó); [[美国]]/[[美國]] (Měiguó)
 *Dansk: [[Amerikas Forenede Stater]]
 *Dutch: [[Verenigde Staten van Amerika]] ''f pl'', [[VSA]]
-*[[Esperanto]]: [[Unuiĝintaj Ŝtatoj de Ameriko]]
+*[[Esperanto]]: [[Usono]], [[Unuiĝintaj Ŝtatoj de Ameriko]]
 *Finnish: [[Amerikan Yhdysvallat]], ''short:'' [[Yhdysvallat]], [[USA]]
 *French: [[États-Unis d'Amérique]] ''m pl'', [[É-U]]
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
