/* Translations */ +la <come#656593>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -38,6 +38,7 @@
 {{mid}}
 *Japanese: [[来る]] (くる, kuru)
 *Kurdish: [[hatin]]
+*Latin: [[venire]]
 *Manchu: [[jimbi]]
 *Mongolian : ирэх (irekh)
 *Persian: [[آمَدَن]] (āmædæn)
