--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -9,7 +9,7 @@
 {{en-noun|fight|fights}}
 # A [[physical]] [[confrontation]].
 # A [[battle]].
-# A conflict between two wills.
+# A conflict of two wills.
 # A playground [[tussle]].
 # {{cattag|Sports}} A [[martial arts]] [[match]].
 
