--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -41,6 +41,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 '''''Usage Note:''''' ''Beautiful'' can also be exclaimed by someone to mean "What a thing of beauty!"  ('''Example:'''  ''Beautiful!  What a catch!'' [referring to an athlete catching a ball]).  In this usage, ''beautiful'' would generally be labeled an adjective, not an interjection.
 
 === Translations ===
+*[[Afrikaans]]: [[mooi]]
 *[[Anglo-Saxon]]: [[wlitig]]
 *[[Arabic]]: [[جميل]]
 *[[Breton]]: [[brav]], [[kaer]]
