--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -22,6 +22,7 @@
 *German: [[spielen]]
 *Italian: [[giocare]]
 {{mid}}
+*Old English: [[lacan|lācan]]
 *Russian: [[играть]]
 *Slovene: [[igrati se]]
 *Spanish: [[jugar]]
@@ -38,6 +39,7 @@
 *German: [[spielen]]
 {{mid}}
 <!--Put translations for languages from J to Z here-->
+*Old English: [[lacan|lācan]]
 *Russian: [[играть]]
 *Slovene: [[igrati]]
 *Spanish: [[tocar]]
