moved defn to avoid having to renumber translations <fight#658108>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -9,9 +9,9 @@
 {{en-noun|fight|fights}}
 # A [[physical]] [[confrontation]].
 # A [[battle]].
-# A conflict of two wills.
 # A playground [[tussle]].
 # {{cattag|Sports}} A [[martial arts]] [[match]].
+# A [[conflict]] of two [[will]]s.
 
 ====Translations====
 {{top}}
