/* Verb */ re-adding "To orgasm" <come#658905>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -18,6 +18,7 @@
 {{irregverb|come|[[comes]]|[[came]]|come|[[coming]]}}
 
 # To [[move]] from further [[away]] to [[near]]er to.
+# {{slang}} To [[orgasm]]
 
 ==== Antonyms ====
 *[[go]]
