--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -33,6 +33,7 @@
 #:''The government pledged to '''fight''' corruption.''
 ====Translations====
 *German: [[kämpfen]] (1), [[bekämpfen]] (2)
+*Old English: [[sacan]]
 
 ====Translations to be checked====
 {{top}}
