--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -19,7 +19,7 @@
 *Dutch: [[gevecht]] {{n}}
 *Finnish: [[tappelu]] (2), [[ottelu]] (4)
 *French: [[bagarre]] {{f}}, [[combat]]
-*German: [[Kampf]] ''m'' (1,4), [[Gefecht]] ''n'' (2), [[Keilerei]] ''f'' (3)
+*German: [[Kampf]] ''m'' (1,4), [[Wettkampf]] ''m'' (2), [[Keilerei]] ''f'' (3)
 {{mid}}
 *Polish: [[walka]] {{f}}
 *Spanish: [[lucha]]
