--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -19,9 +19,7 @@
 *# any point of light
 *# shorthand for [[Singapore]] (星加坡)
 
-----
-
-== Chinese [[Hanzi]] ==
+== Chinese Hanzi ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -71,19 +69,11 @@
 *[[星子]]
 *[[海星]]
 
-* '''Other info''': 
-
-----
-
-== Japanese [[Kanji]] ==
-
-* '''Readings''':
-** '''[[On]]''': [[せい]] (sei), [[しょう]] (shō)
-** '''[[Kun]]''': [[ほし]] (hoshi)
-
+==Japanese==
+===Kanji===
+{{kanji2|[[せい]] (sei), [[しょう]] (shō)|[[ほし]] (hoshi)}}
 ===Noun===
-[[ほし]] (hoshi)
-
+{{janoun|ほし|hoshi}}
 # A [[stellar]] object, e.g. [[star]], [[planet]], satellite, or a [[comet]].
 
 ===Proper noun===
