--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -3,6 +3,7 @@
 
 ===Pronunciation===
 *fīt, /faɪt/, /<tt>faIt</tt>/
+*{{audio|en-us-fight.ogg|Audio (US)}}
 *:[[Rhymes:English:-aɪt|Rhymes: -aɪt]]
 
 ===Noun===
