--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -12,6 +12,7 @@ From ''Oporto'', Portugal <!-- The drink is - how about the other senses?  The s
 #(''Queensland'') {{AU}} A schoolbag or suitcase.
 # {{computing}} A logical or physical construct in and from which data are transferred.
 # {{computing}} The act of adapting a [[program]] so that it works on a different [[platform]] from the one on which it originally worked.
+# ''(computing)'' A female connector of an electronic device, into which a cable can be inserted.
 #An entryway or [[portal]].
 #An opening where a connection (such as a pipe) is made.
 #A [[porthole]].
@@ -179,7 +180,6 @@ The rudder, or "steerboard" was usually hung on the right side of the boat (whic
 '''port''' (''no plural'')
 
 # {{nautical}} The lefthand side of a [[vessel]] when one is facing the front, or [[fore]] or [[bow]]. (Port does not change based on the orientation of the person aboard the ship or boat.)
-# ''(computing)'' A female connector.
 
 ====Synonyms====
 *[[larboard]]
