/* Translations */ +latin <find#668257>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -35,6 +35,7 @@
 *[[Hebrew]]: [[לימצו]] (limtzo)
 {{mid}}
 *Japanese: [[発見]]する (はっけんする, hakken-suru), [[見つける]](みつける,mitsukeru)
+*Latin: [[invenire]]
 *[[Latvian]]: atrast
 *Mongolian: [[олох]]
 *Russian: [[найти]]
