noun template <coat#677409>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Noun ===
-'''coat''' (''plural:'' '''coats''')
+{{en-noun-reg}}
 
 #an [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].
 #a [[covering]] of [[material]], such as [[paint]]
