--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -56,6 +56,9 @@
 [[Category:no:Countries]]
 '''Israel'''
 #[[#English|Israel]]
+====See also====
+*[[israeler]]
+*[[israelsk]]
 
 ==Swedish==
 ===Proper noun===
