--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -62,9 +62,6 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 
 [[Category:English country nouns]]
 
-
-----
-
 ==Norwegian==
 ===Proper noun===
 [[Category:no:Countries]]
@@ -72,6 +69,9 @@ From Dutch '''[[Nieuw Zeeland]]''', "new Zeeland", after the Dutch settlement in
 #[[#English|New Zealand]]
 ====Synonyms====
 *[[Ny-Zealand]]
+====See also====
+*[[newzealending]], [[newzealander]], [[nyzealending]], [[nyzealender]]
+*[[newzealandsk]], [[nyzealandsk]]
 
 [[io:New Zealand]]
 [[hu:New Zealand]]
