--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From the [[Persian]] words &#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#1607; ''p&aelig; jama'' meaning ''leg garment'' via [[Urdu]]/[[Hindi]] word ''pajama''.
+From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#1607;}} ''p&aelig; jama'' meaning ''leg garment'' via [[Urdu]]/[[Hindi]] word ''pajama''.
 
 ===Noun===
 '''pajamas''' ''plural''
@@ -10,6 +10,9 @@ From the [[Persian]] words &#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#1607; ''p
 
 ===Alternative spellings===
 *[[pyjamas]] (''British'')
+
+====Derived terms====
+*[[cat's pajamas|cat’s pajamas]]
 
 ====Translations====
 *''See [[pyjamas#Translations|pyjamas]]''
