--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -15,6 +15,7 @@
 {{top}}
 *[[Afrikaans]]: [[Duitsland]]
 *Arabic: {{ARchar|[[المانيا]]}} (Almánya) {{f}}
+*Armenian: [[Գերմանիա]] (Germania)
 *Bosnian: [[Njemačka]] {{f}}
 *Breton: [[Alamagn]]
 *Catalan: [[Alemanya]]
