--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -39,6 +39,7 @@
 
 ====Translations====
 *'''Russian''': [[кирпичный]] (kirpichniy)
+*{{uk}}: [[цегельний]] (ceh'''e'''l'nyj) {{m}}
 *{{vi}}: bằng gạch
 
 === Derived terms ===
