/* Translations */ fmt & balance <float#690537>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -22,95 +22,53 @@
 
 '''be supported by a liquid'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[drijven]]
 *Finnish: [[kellua]]
 *French: [[flotter]]
-*Italian: [[galleggiare]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
+*Italian: [[galleggiare]]
 *Russian: [[плавать]], [[всплыть]] (to reach the surface)
 {{bottom}}
 
 '''be capable of floating'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
+{{top}}
 *Dutch: [[drijven]]
+{{mid}}
 *Finnish: [[kellua]], pysyä pinnalla
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
+{{bottom}}
 
 '''drift gently through the air'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Finnish: [[leijua]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 *Russian: [[парить]], [[плыть]]
 {{bottom}}
 
 '''move in a particular direction with the liquid in which one is floating'''
 {{top}}
-<!--Put translations for languages from A to I here-->
 *Dutch: [[meedrijven]]
 *Finnish: [[lipua]]
 {{mid}}
-<!--Put translations for languages from J to Z here-->
 *Russian: [[плыть]]
 {{bottom}}
 
 '''move in a fluid manner'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
+{{top}}
 *Dutch: [[vloeien]]
+{{mid}}
 *Finnish: [[lipua]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
+{{bottom}}
 
 '''automatically adjust a parameter as related parameters change'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
+{{top}}
 *Dutch: [[vloeien]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
+{{mid}}
+{{bottom}}
 
 '''allow a price to be determined by the markets as opposed to by rule'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from A to I here-->
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-<!--Put translations for languages from J to Z here-->
-|}
-|}
+{{top}}
+{{mid}}
+{{bottom}}
 
 ===Transitive verb===
 {{en-infl-reg-consonant|float|||}}
