--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -114,6 +114,8 @@ From German ''prūme'', originally from the Latin ''prunum'', from the Greek ''p
 *Welsh: [[eirinen]] {{f}}
 *[[Zulu]]: [[iplamu]], [[ithungulu]]
 
+[[Category:Trees]]
+
 ===Adjective===
 '''plum'''
 
