--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -24,6 +24,7 @@
 *Italian: [[succhiare]], [[suggere]]
 *Portuguese: [[chupar]], [[sugar]]
 *Russian: [[сосать]], [[всасывать]]
+*Spanish: [[chupar]]
 {{bottom}}
 
 '''colloquial: term of general disparagement'''
