--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -10,7 +10,7 @@ From the [[Persian]] words {{FAchar|&#1662;&#1575;&#1610;&#1580;&#1575;&#1605;&#
 Wrong definition: #[[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 
 Correct Definition:
-A leg garment which can be loose or tight, holds to the wasteline by strings. A shirt that accompanies a pajama is called "Kurta".
+A leg garment loose or tight, holds to the wasteline by strings. A shirt that accompanies a pajama is called "Kurta".
 
 ===Alternative spellings===
 *[[pyjamas]] (''British'')
