--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -15,6 +15,7 @@
 *Indonesian: [[biaya]], [[ongkos]]
 {{mid}}
 *Japanese: [[費用]] ([[ひよう]], hiyō)
+*Chinese: [[費]] ([[]], fei)
 *Portuguese: custo
 {{bottom}}
 
