--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -52,13 +52,13 @@
 *Ido: [[Francia]]
 *Indonesian: [[Perancis]]
 *Interlingua: [[Francia]]
-{{mid}}
 *Irish: [[an Fhrainc]] {{f}}
 *Italian: [[Francia]] {{f}}
 *Japanese: [[フランス]], [[仏蘭西]] (Furánsu)
 *[[Kannada]]: [[ಪ್ರಾಂಸ್]]
 *[[Kashmiri]]: [[फ्रांस]]
 *Korean: [[프랑스]] (Peurangseu)
+{{mid}}
 *Latin: [[Gallia]] {{f}}
 *Latvian: [[Francija]] {{f}}
 *[[Limburgish]]: [[Frankriek]]
@@ -70,7 +70,7 @@
 *Malay: [[Perancis]]
 *[[Maldivian]]: [[Faranseysi Vilath]]
 *Mongolian: [[Франц улс]] (Frants uls)
-*[[Nauruan]]: [[France]]
+*[[Nauruan]]: France
 *Norwegian: [[Frankrike]]
 *[[Occitan]]: [[França]]
 *Old English: [[Francland]]
@@ -87,11 +87,11 @@
 *Scots Gaelic: [[An Fhraing]]
 *Serbian:
 *:Cyrillic: [[Француска]] {{f}}
-*:Latin: [[Francuska#Serbian|Francuska]] {{f}}
+*:Roman: [[Francuska#Serbian|Francuska]] {{f}}
 *Sicilian: [[Francia]] {{f}}
 *Slovak: [[Francúzsko]]
 *Slovene: [[Francija]] {{f}}
-*[[Sotho]]: [[France]]
+*[[Sotho]]: France
 *Spanish: [[Francia]] {{f}}
 *Swedish: [[Frankrike]]
 *Tagalog: [[Pransya]]
