--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -17,7 +17,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,13 +29,74 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ming4
 
-* '''Other info''': 
+===Compounds===
+*[[明暗]]
+*[[明白]]
+*[[明白人]]
+*[[明灿灿]]
+*[[明察]]
+*[[明察暗访]]
+*[[明察秋毫]]
+*[[明达]]
+*[[明灯]]
+*[[明断]]
+*[[明矾]]
+*[[明光]]
+*[[明光光]]，[[明光光的]]
+*[[明光瓦亮]]
+*[[明火]]
+*[[明洁]]
+*[[明净]]
+*[[明静]]
+*[[明镜]]
+*[[明朗]]
+*[[明亮]]
+*[[明明]]
+*[[明年]]
+*[[明枪暗箭]]
+*[[明抢]]
+*[[明确]]
+*[[明儿]]
+*[[明日]]
+*[[明锐]]
+*[[明闪闪]]，[[明闪闪的]]
+*[[明升暗降]]
+*[[明显]]
+*[[明星]]
 
+===Phrases===
+*[[明抢臆躲，暗箭难防]]
+
+* '''Other info''': 
+----
 
 == Japanese ==
 ===Kanji===
-{{kanji2|[[めい]] ([[mei]]), [[みょう]] ([[myō]])| [[あかるい]] ([[明るい]], [[akarui]]), [[あきらか]] ([[明らか]], [[akiraka]]), [[あける]] ([[明ける]], [[akeru]])}}
+{{kanji2|メイ (mei), ミョウ (myō)| [[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru)}}
 
+===Compounds===
+*[[明星]]
+*[[明朝]]
+*[[明王]]
+*[[明快]]
+*[[明解]]
+*[[明海]]
+*[[明晦]]
+*[[明鏡止水]]
+*[[明君]]
+*[[明言]]
+*[[明察]]
+*[[明示]]
+*[[明治]]
+*[[明時]]
+*[[明信]]
+*[[明晰]]
+*[[明哲]]
+*[[明徳]]
+*[[明白]]
+*[[明瞭]]
+
+----
 
 == [[Korean]] [[Hanja]] ==
 
@@ -47,7 +108,7 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': myeong
 ** '''[[McCune-Reischauer]]''': myŏng
 ** '''[[Yale]]''': meyng
-
+----
 
 == Dictionary Information ==
 
