--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -6,8 +6,8 @@
 *[[w:IPA|IPA]]: /'kɒst/
 
 === Noun ===
-'''cost'''  (plural: '''[[costs]]''')
-# amount of money, time, etc. that required or used
+{{en-noun|cost|costs}}
+# Amount of money, time, etc. that required or used.
 
 ====Translations====
 {{top}}
@@ -20,8 +20,9 @@
 {{bottom}}
 
 === Verb ===
-{{irregverb|cost|[[costs]]|cost|cost|[[costing]]}}
-# to [[incurr]] a [[charge]], a [[price]]
+[[Category:English irregular verbs]]
+{{en-verb2|'''to cost'''|'''[[costs]]'''|'''cost'''|'''cost'''|'''[[costing]]'''}}
+# To [[incur]] a [[charge]], a [[price]].
 
 ====Translations====
 {{top}}
