--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -45,6 +45,7 @@ Term meaning "What a mess!" or "What a screw-up!"
 
 === Translations ===
 *Afrikaans: [[mooi]]
+*Albanian:  i bukur ''m'', e bukur ''f''
 *Anglo-Saxon: [[wlitig]]
 *Arabic: [[جميل]]
 *Breton: [[brav]], [[kaer]]
